--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -10,38 +10,42 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Pane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #c62828;">
+      <Pane prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #c62828;">
          <children>
-            <Label layoutX="56.0" layoutY="190.0" text="School Management System" textFill="WHITE">
+            <Label layoutX="31.0" layoutY="190.0" text="School Management System" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="369.0" text="\@CopyRight by Sasiporn" textFill="#fcfcfc" />
-            <ImageView fitHeight="82.0" fitWidth="87.0" layoutX="109.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
+            <Label layoutX="14.0" layoutY="373.0" text="\@CopyRight by Sasiporn" textFill="#fcfcfc">
+               <font>
+                  <Font size="9.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="82.0" fitWidth="87.0" layoutX="84.0" layoutY="97.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/icons8_Library_50px.png" />
                </image>
             </ImageView>
          </children>
       </Pane>
-      <TextField fx:id="username" layoutX="401.0" layoutY="132.0" promptText="User" />
-      <PasswordField fx:id="password" layoutX="401.0" layoutY="176.0" promptText="Password" />
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="352.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
+      <Pane layoutX="250.0" prefHeight="400.0" prefWidth="250.0" style="-fx-background-color: #aeaeae;" />
+      <TextField fx:id="username" layoutX="325.0" layoutY="127.0" promptText="User" />
+      <PasswordField fx:id="password" layoutX="325.0" layoutY="171.0" promptText="Password" />
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="276.0" layoutY="120.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/icons8_Male_User_50px_4.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="352.0" layoutY="174.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="276.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/icons8_Lock_50px_1.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnLogin" layoutX="401.0" layoutY="221.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="149.0" style="-fx-background-color: #c62828;" text="Login" textFill="#fcf9f9" />
-      <Label layoutX="312.0" layoutY="369.0" text="DB Status" />
-      <Label fx:id="dbStatus" layoutX="389.0" layoutY="369.0" prefHeight="17.0" prefWidth="167.0" textFill="#c62828" />
+      <Button fx:id="btnLogin" layoutX="325.0" layoutY="216.0" mnemonicParsing="false" onAction="#Login" prefHeight="30.0" prefWidth="149.0" style="-fx-background-color: #c62828;" text="Login" textFill="#fcf9f9" />
+      <Label layoutX="255.0" layoutY="369.0" text="DB Status" />
+      <Label fx:id="dbStatus" layoutX="311.0" layoutY="369.0" prefHeight="17.0" prefWidth="167.0" textFill="#c62828" />
    </children>
 </AnchorPane>
